--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       <h1 class="text-2xl bg-pink-500 text-green-300">2. Border and Colors</h1>
       <p class="p-2">Border and Colors properties can be used in Tailwind CSS something like this:</p>
       <div class="flex justify-center">
-        
+        <div class="h-32 w-32 m-1 bg-blue-500"></div>
+        <div class="h-32 w-32 m-1 bg-green-700"></div>
+        <div class="h-32 w-32 m-1 bg-red-500"></div>
+        <div class="h-32 w-32 m-1 bg-yellow-500"></div>
       </div>
     </div>
   </body>
