--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
       <h1 class="text-2xl bg-pink-500 text-green-300">2. Border and Colors</h1>
       <p class="p-2">Border and Colors properties can be used in Tailwind CSS something like this:</p>
       <div class="flex justify-center">
-        <div class="h-32 w-32 m-1 bg-blue-500"></div>
-        <div class="h-32 w-32 m-1 bg-green-700"></div>
-        <div class="h-32 w-32 m-1 bg-red-500"></div>
-        <div class="h-32 w-32 m-1 bg-yellow-500"></div>
+        <div class="h-32 w-32 m-1 bg-blue-500 border-2 border-purple-900 rounded text-white">border-2 border-purple-900 rounded</div>
+        <div class="h-32 w-32 m-1 bg-green-700 border-4 border-yellow-500 rounded-lg text-white">border-4 border-yellow-500 rounded-lg</div>
+        <div class="h-32 w-32 m-1 bg-red-500 border-8 border-blue-500 text-white">border-8 border-blue-500</div>
+        <div class="h-32 w-32 m-1 bg-yellow-500 border-b-4 border-t-4 border-green-500 rounded-md text-white">border-b-4 border-t-4 border-green-500 rounded-md</div>
       </div>
+      <p class="p-2">For more border and Colors Properties refer official docs: <a href="https://tailwindcss.com/docs/border-radius" target=”_blank”>Tailwind Borders</a> <span class=" text-blue-700 text-2xl">></span>
+        <a href="https://tailwindcss.com/docs/customizing-colors" target=”_blank”>Tailwind Colors</a></p>
     </div>
   </body>
 </html>
