flexbox box alignment properties

--- a/index.html
+++ b/index.html
@@ -102,14 +102,52 @@
       <p class="p-2">For more Flexbox Properties, refer official docs: <a href="https://tailwindcss.com/docs/flex" target=”_blank”>Tailwind Flex</a>
       </p>
     </div>
-    <!-- Box Alignment -->
 
+    <!-- Box Alignment -->
     <div class="box-alignment">
       <h1 class="text-2xl bg-pink-500 text-green-300">5. Box-alignment</h1>
       <p class="p-2">2 of the most important Box alignment properties of flexbox: justify-content and align-item can be used in Tailwind CSS something like this:</p>
+      <div class="flex flex-col border border-black m-1 h-96 w-auto">
+        <div class="flex border items-center border-black m-1">
+          <div class="flex justify-center items-center border border-black h-24 w-72 m-1">                 
+            <div class="h-8 w-12 border-2 border-black m-1">Box-1</div>
+            <div class="h-8 w-12 border-2 border-black m-1">Box-2</div>
+            <div class="h-8 w-12 border-2 border-black m-1">Box-3</div>
+            <div class="h-8 w-12 border-2 border-black m-1">Box-4</div>
+          </div>
+          <p class="text-center">-> flex justify-center items-center</p>
+        </div>
+
+        <!-- 2nd -->
+        <div class="flex border items-center border-black m-1">
+          <div class="flex justify-start items-start border border-black h-24 w-72 m-1">                 
+            <div class="h-8 w-12 border-2 border-black m-1">Box-1</div>
+            <div class="h-8 w-12 border-2 border-black m-1">Box-2</div>
+            <div class="h-8 w-12 border-2 border-black m-1">Box-3</div>
+            <div class="h-8 w-12 border-2 border-black m-1">Box-4</div>
+          </div>
+          <p class="text-center">-> flex justify-start items-start</p>
+        </div>
+        <!-- 3rd -->
+        <div class="flex border items-center border-black m-1">
+          <div class="flex justify-end items-end border border-black h-24 w-72 m-1">                 
+            <div class="h-8 w-12 border-2 border-black m-1">Box-1</div>
+            <div class="h-8 w-12 border-2 border-black m-1">Box-2</div>
+            <div class="h-8 w-12 border-2 border-black m-1">Box-3</div>
+            <div class="h-8 w-12 border-2 border-black m-1">Box-4</div>
+          </div>
+          <p class="text-center">-> flex justify-end items-end </p>
+        </div>
+      </div>
+      <p class="p-2">For more Flexbox justify-content and align-items Properties, refer official docs: <a href="https://tailwindcss.com/docs/justify-content" target=”_blank”>Tailwind Justify Content</a><span class=" text-blue-700 text-2xl">></span>
+        <a href="https://tailwindcss.com/docs/align-items" target="_blank">Tailwind Align Items</a>
+      </p>
     </div>
 
     <!-- Typography -->
+    <div class="Typography">
+      <h1 class="text-2xl bg-pink-500 text-green-300">6. Typography</h1>
+      <p class="p-2">Typography properties can be used in Tailwind CSS something like this:</p>
 
     <!-- Box Shadow and Opacity -->
 
